@@ -88,6 +88,77 @@ public class JsonMessageHandlerTest extends TestCase {
     }
 
     /**
+     * Ensure that alternative text/xml attachment that is part of multipart/alternative gets ignored
+     */
+    public void testBug32692() {
+        try {
+            final byte[] bytes = ("Content-Type: multipart/alternative; boundary=\"----=_Part_8_228463983.1398448328908\"\n" +
+                "Date: Fri, 15 Nov 2013 04:55:25 -0800 (PST)\n" +
+                "From: \"email1@mytrial.co.uk\" <email1@mytrial.co.uk>\n" +
+                "To: ho hum <email53@mytrial.co.uk>\n" +
+                "Message-ID: <11574183.303149.1384520125498.chat@gmail.com>\n" +
+                "Subject: Chat with email1@mytrial.co.uk\n" +
+                "MIME-Version: 1.0\n" +
+                "\n" +
+                "------=_Part_8_228463983.1398448328908\n" +
+                "Content-Type: text/xml; charset=utf-8\n" +
+                "Content-Transfer-Encoding: 7bit\n" +
+                "\n" +
+                "<con:conversation xmlns:con=\"google:archive:conversation\">\n" +
+                "<cli:message to=\"email53@mytrial.co.uk\" iconset=\"classic\" from=\"email1@mytrial.co.uk\" int:cid=\"278391101870075059\" int:sequence-no=\"1\" int:time-stamp=\"1384520125480\" xmlns:cli=\"jabber:client\" xmlns:int=\"google:internal\">\n" +
+                "<cli:body>hi</cli:body><met:google-mail-signature xmlns:met=\"google:metadata\">2jLeBillxquvrnTPZKm8uZNifgY</met:google-mail-signature>\n" +
+                "<x stamp=\"20131115T12:55:25\" xmlns=\"jabber:x:delay\"/><time ms=\"1384520125498\" xmlns=\"google:timestamp\"/>\n" +
+                "</cli:message></con:conversation>\n" +
+                "\n" +
+                "------=_Part_8_228463983.1398448328908\n" +
+                "Content-Type: text/html; charset=utf-8\n" +
+                "Content-Transfer-Encoding: 7bit\n" +
+                "\n" +
+                "hi\n" +
+                "\n" +
+                "------=_Part_8_228463983.1398448328908--").getBytes();
+
+            // Ensure that duplicate text/calendar attachment that is part of multipart/alternative gets ignored
+
+            final MailMessage mail = MimeMessageConverter.convertMessage(bytes);
+
+            // Preps
+
+            ServerServiceRegistry.getInstance().addService(HtmlService.class, new SimHtmlService());
+
+            UserSettingMail usm = new UserSettingMail(1, 1);
+            usm.parseBits(627479);
+
+            ServerSession session = new SimServerSession(new SimContext(1), new SimUser(1), null);
+
+            JsonMessageHandler handler = new JsonMessageHandler(0, "INBOX/1", DisplayMode.DISPLAY, true, session, usm, false, 0);
+
+            // Test
+
+            MailMessageParser parser = new MailMessageParser();
+            parser.parseMailMessage(mail, handler);
+
+            JSONObject jMail = handler.getJSONObject();
+            assertNotNull(jMail);
+
+            JSONArray jAttachments = jMail.getJSONArray("attachments");
+            assertNotNull(jAttachments);
+            assertEquals("Unexpected number of attachments", 1, jAttachments.length());
+
+            final JSONObject jAttachment1 = jAttachments.getJSONObject(0);
+            assertNotNull(jAttachment1);
+
+            assertTrue("Unexpected content", jAttachment1.getString("content_type").startsWith("text/html"));
+
+            // System.out.println(jAttachment1.toString(2));
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            fail(e.getMessage());
+        }
+    }
+
+    /**
      * Ensure that duplicate text/calendar attachment that is part of multipart/alternative gets ignored
      */
     public void testBug32108() {
@@ -159,197 +230,6 @@ public class JsonMessageHandlerTest extends TestCase {
                 " =20\n" +
                 "  <title></title>=20\n" +
                 "  <meta charset=3D\"UTF-8\" />=20\n" +
-                "  <style type=3D\"text/css\">\n" +
-                "            .content {\n" +
-                " white-space: normal;\n" +
-                " color: black;\n" +
-                " font-family: Arial, Helvetica, sans-serif;\n" +
-                " font-size: 12px;\n" +
-                " cursor: default;\n" +
-                "}\n" +
-                "/* shown_as */\n" +
-                "\n" +
-                "\n" +
-                ".shown_as.reserved { background-color: #08c; } /* blue */\n" +
-                ".shown_as.temporary { background-color: #fc0; } /* yellow */\n" +
-                ".shown_as.absent { background-color: #913F3F; } /* red */\n" +
-                ".shown_as.free { background-color: #8EB360; } /* green */\n" +
-                "\n" +
-                ".shown_as_label.reserved { color: #08c; } /* blue */\n" +
-                ".shown_as_label.temporary { color: #fc0; } /* yellow */\n" +
-                ".shown_as_label.absent { color: #913F3F; } /* red */\n" +
-                ".shown_as_label.free { color: #8EB360; } /* green */\n" +
-                "\n" +
-                "em {\n" +
-                " font-weight: bold;\n" +
-                "}\n" +
-                "\n" +
-                "/* Detail view */\n" +
-                "\n" +
-                ".timezone {\n" +
-                " margin-bottom: 2em;\n" +
-                "}\n" +
-                "\n" +
-                ".justification, .attachmentNote {\n" +
-                " margin-top: 2em;\n" +
-                " margin-bottom: 2em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .action {\n" +
-                " float: right;\n" +
-                " margin-right: 1em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .link {\n" +
-                " cursor: pointer;\n" +
-                " text-decoration: underline;\n" +
-                " color: #00a0cd;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .calendar-buttons {\n" +
-                " height: 2em;\n" +
-                " text-align: right;\n" +
-                " line-height: 2em;\n" +
-                " border-bottom: 1px solid #f0f0f0;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .date {\n" +
-                "    font-size: 11pt;\n" +
-                "    color: #ccc;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .interval {\n" +
-                "    color: #555;\n" +
-                "    white-space: nowrap;\n" +
-                "    float: right;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .day {\n" +
-                "    color: #888;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .title {\n" +
-                "    font-size: 18pt;\n" +
-                "    line-height: 22pt;\n" +
-                "    margin: 0.25em 0 0.25em 0;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .location {\n" +
-                "    font-size: 11pt;\n" +
-                "    color: #888;\n" +
-                "    margin-bottom: 1em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .label {\n" +
-                "    font-size: 9pt;\n" +
-                "    color: #888;\n" +
-                "    clear: both;\n" +
-                "    border-bottom: 1px solid #ccc;\n" +
-                "    padding: 1em 0 0.25em 0em;\n" +
-                "    margin-bottom: 0.5em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .note {\n" +
-                "    max-width: 550px;\n" +
-                "    margin: 2em 0 1em 0;\n" +
-                "    -webkit-user-select: text;\n" +
-                "    -moz-user-select: text;\n" +
-                "    user-select: text;\n" +
-                "    cursor: text;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .participants {\n" +
-                "    min-height: 2em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .participants table {\n" +
-                "    text-align: left;\n" +
-                "    vertical-align: left;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .participant {\n" +
-                "    line-height: 1.2 em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .detail-label {\n" +
-                "    display: inline-block;\n" +
-                "    width: 80px;\n" +
-                "    white-space: nowrap;\n" +
-                "    color: #666;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .detail {\n" +
-                "    white-space: nowrap;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .detail.shown_as {\n" +
-                "    display: inline-block;\n" +
-                "    height: 1em;\n" +
-                "    width: 1em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .participant .status { font-weight: bold; }\n" +
-                ".calendar-detail .participant .status.accepted { color: #8EB360; } /* green=\n" +
-                " */\n" +
-                ".calendar-detail .participant .status.declined { color: #913F3F; } /* red *=\n" +
-                "/\n" +
-                ".calendar-detail .participant .status.tentative { color: #c80; } /* orange =\n" +
-                "*/\n" +
-                "\n" +
-                ".calendar-detail .participant .comment {\n" +
-                "    color: #888;\n" +
-                "    display: block;\n" +
-                "    white-space: normal;\n" +
-                "    padding-left: 1em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-detail .group {\n" +
-                "    margin: 0.75em 0 0.25em 0;\n" +
-                "    color: #333;\n" +
-                "}\n" +
-                "\n" +
-                ".person, .person-link {\n" +
-                " color: #00A0CD;\n" +
-                "}\n" +
-                "\n" +
-                ".clear-title {\n" +
-                " font-family: OpenSans, Helvetica, Arial, sans-serif;\n" +
-                " font-weight: 200;\n" +
-                " font-size: 20pt;\n" +
-                " line-height: 1.15em;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-action {\n" +
-                " margin-bottom: 2em;\n" +
-                " font-family: OpenSans, Helvetica, Arial, sans-serif;\n" +
-                " font-weight: 200;\n" +
-                " font-size: 12pt;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-action .changes{\n" +
-                "    margin-top: 2em;\n" +
-                " font-size: 11pt;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-action .changes .original {\n" +
-                "    font-weight: bold;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-action .changes .recurrencePosition {\n" +
-                "    font-weight: bold;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-action .changes .updated {\n" +
-                "    color: green;\n" +
-                "    font-weight: bold;\n" +
-                "}\n" +
-                "\n" +
-                ".calendar-action .status {  }\n" +
-                ".calendar-action  .status.accepted { color: #8EB360; } /* green */\n" +
-                ".calendar-action  .status.declined { color: #913F3F; } /* red */\n" +
-                ".calendar-action  .status.tentative { color: #c80; } /* orange */\n" +
-                "\n" +
-                "        </style>=20\n" +
                 " =20\n" +
                 " </head><body>\n" +
                 " =20\n" +
